tests/error/comptime/check_slice_construction12.bz
// error: invalid memory range for a slice of type '[: int32]'
// note: while evaluating expression at compile time
// note: begin and end addresses point to different subobjects in this global object
// note: begin address points to a subobject at offset 0
// note: end address points to a subobject at offset 4
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		consteval t = [ 0, 0 ];
		__builtin_slice_from_ptrs(&t[0], &t[1]);
	});
}
